feat: Added commands to help modify playtime windows